--- a/src/main/resources/templates/equipoEdit_template.html
+++ b/src/main/resources/templates/equipoEdit_template.html
@@ -62,7 +62,7 @@
 					</table>
 					<br>
 					<div class="form-group">
-						<a href="/jugador/nuevo/{equipo.nombre}" class="btn btn-success col-sm-offset-2 col-sm-2"><span class="glyphicon glyphicon-plus"></span> Añadir jugador</a>
+						<a href="/jugador/nuevo/{{equipo.nombre}}" class="btn btn-success col-sm-offset-2 col-sm-2"><span class="glyphicon glyphicon-plus"></span> Añadir jugador</a>
 					</div>
 				</div>
 		</div><!-- /.container -->
