--- a/src/main/resources/templates/cuentasAdmin_template.html
+++ b/src/main/resources/templates/cuentasAdmin_template.html
@@ -1,8 +1,13 @@
 {{#layout}}
     
     <div class="container theme-showcase">
-
-	    <h2>El usuario "{{nombre}}" es un administrador de la web y no puede ser eliminado.</h2>
+		{{#delegadoconequipo}}
+			<h2>El usuario "{{nombre}}" es un delegado con equipo asignado. No se puede cambiar el rol hasta que deje de tener equipo asignado.</h2>
+		{{/delegadoconequipo}}
+		
+		{{#cuentaadmin}}
+	    	<h2>El usuario "{{nombre}}" es un administrador de la web y no puede ser editado.</h2>
+	    {{/cuentaadmin}}	
 	   <br>
 		<a href="/cuentas">Volver a la gestion de cuentas de usuario</a>
     </div><!-- /.container -->
