--- a/src/main/resources/templates/cuentas_template.html
+++ b/src/main/resources/templates/cuentas_template.html
@@ -15,14 +15,14 @@
 				<tr>
 					<th>Nombre de usuario</th>
 					<th>Roles</th>
-					<th>Convertir en delegado</th>
+					<th>Cambiar rol</th>
 					<th>Eliminar</th>
 					{{#usuarios}}
 	  					<tr>
 	    					<td>{{name}}</a></td>
 	    					<td>{{roles}}</td>
 	    					<td><a href="/cuentas/rolup/{{name}}"><span class="btn btn-success">Ejecutar</span></a></td>
-	    					<td><a href="/cuentas/eliminar/{{name}}"><span class="btn btn-danger">Ejecutar</span></a></td>
+	    					<td><a href="/cuentas/eliminar/{{id}}"><span class="btn btn-danger">Ejecutar</span></a></td>
 	  					</tr>
 	  				{{/usuarios}}
 				</table>
