--- a/src/main/resources/templates/equipoNuevoSave_template.html
+++ b/src/main/resources/templates/equipoNuevoSave_template.html
@@ -5,7 +5,7 @@
 		  	<h2>El equipo "{{nombre}}" ha sido creado correctamente para el delegado {{dele}}.</h2>
 	  {{/disponible}}
 	  {{^disponible}}
-	  		<h2>El nombre de equipo "{{nombre}}" ya está en uso. Pulsa <a href="/equipo/nuevo/{{userName}}">aquí</a> para elegir otro.</h2>
+	  		<h2>El nombre de equipo "{{nombre}}" ya está en uso. Pulsa <a href="/equipo/nuevo">aquí</a> para elegir otro.</h2>
 	  {{/disponible}}
        
     </div><!-- /.container -->
