--- a/src/main/resources/templates/equipoEdit_template.html
+++ b/src/main/resources/templates/equipoEdit_template.html
@@ -14,7 +14,6 @@
 				      <input type="hidden" name="nombreviejo" value="{{equipo.nombre}}"/>
 				      <input type="text" class="form-control" value="{{equipo.nombre}}" name="nombre" required/>
 				      <input type="hidden" name="id" value="{{equipo.id}}"/>
-				      <input type="hidden" name="usuario" value="{{userName}}"/>
 				    </div>
 				  </div>
 				  
@@ -75,12 +74,17 @@
 			  					<h3>No hay jugadores inscritos en este equipo.</h3>	
 			  				{{/jugadores}}
 			  				<br>
-							<a href="/jugador/nuevo/{{equipo.nombre}}" class="btn btn-success col-sm-offset-2 col-sm-2"><span class="glyphicon glyphicon-plus"></span> Añadir jugador</a>
+							<a href="/jugador/nuevo" class="btn btn-success col-sm-offset-2 col-sm-2"><span class="glyphicon glyphicon-plus"></span> Añadir jugador</a>
+							
+						</div>
+						<div class="form-group">
+							<br><br>
+							<a href="/equipos/delete"><span class="btn btn-danger">Borrar equipo</span></a>
 						</div>
 					</div>
 			{{/existe}}
 			{{^existe}}
-				<h2>Edición rechazada. No existe ningún equipo llamado "{{nombre}}".</h2>
+				<h2>Edición rechazada. El equipo que se quiere editar no existe.</h2>
 			{{/existe}}
 		</div><!-- /.container -->
 
