--- a/src/main/resources/templates/jugadorDetail_template.html
+++ b/src/main/resources/templates/jugadorDetail_template.html
@@ -4,6 +4,7 @@
   		.tbl th, .tbl td { padding: 5px; border: solid 1px #777; text-align: center;}
   		.tbl th { background-color: lightblue; text-align: center;}
 	</style>
+	{{#existe}}
 		<div class="container theme-showcase">
 			  <div class="form-group">
 			  	<h3>Información del jugador</h3>
@@ -36,10 +37,20 @@
 
 	    	  <br><br>
 	    
-	    	 
+	    	{{#propietario}}
+	    		<div class="form-group">
+					<a href="/equipos/editar" class="btn btn-success col-sm-2"><span class="glyphicon glyphicon-info"></span>Ir a mi equipo</a>
+				</div>
+	    	{{/propietario}}
+	    	
 			<div class="form-group">
 				<a href="/equipos/{{equipo.nombre}}" class="btn btn-success col-sm-2"><span class="glyphicon glyphicon-info"></span>Volver al equipo</a>
 			</div>
 	  </div><!-- /.container -->
-
+	{{/existe}}
+	{{^existe}}
+		<div class="container theme-showcase">
+			<h2>El jugador no existe.<h3>
+		</div>
+	{{/existe}}
 {{/layout}}
