--- a/src/main/resources/templates/jugadorEditado_template.html
+++ b/src/main/resources/templates/jugadorEditado_template.html
@@ -1,22 +1,25 @@
 {{#layout}}
     
     <div class="container theme-showcase">
-	   {{#existe}}
-	   		{{#denegado}}
-	   			<h2>Edición rechazada. Solo el delegado del equipo de un jugador puede editar la información de ese jugador".</h2>
-	   		{{/denegado}}
-	   		{{^denegado}}
+    	{{#propietario}}
+	    	{{#existe}}
 		    	{{#disponible}}
 		    		<h2>Jugador editado correctamente".</h2>
 		   		{{/disponible}}
 		   		{{^disponible}}
 		    		<h2>El jugador no se ha podido editar porque ya existe un jugador con el DNI "{{jugador.dni}}".</h2>
 		   		{{/disponible}}
-		   	{{/denegado}}
-	  {{/existe}}
-	  {{^existe}}
-	  	<h2>El jugador "{{jugador.nombre}}" con DNI "{{jugador.dni}}" no existe y no se puede editar.</h2>
-	  {{/existe}}
-	  <a href="/equipos/editar/{{equipo.nombre}}" class="btn btn-info">Volver a mi equipo</a>
+	  		{{/existe}}
+	  		{{^existe}}
+	  			<h2>El jugador que se quiere editar no existe o el usuario no es delegado del equipo donde milita.</h2>
+	  		{{/existe}}
+	  	{{/propietario}}
+	  	{{^propietario}}
+	  		<h2>No se puede editar el jugador por alguna de las siguientes razones:</h2>
+	   		<h3> - El usuario no está logeado.</h3>
+			<h3> - El usuario no es un delegado.</h3>
+			<h3> - El usuario es delegado pero aún no ha creado un equipo.</h3>
+	  	{{/propietario}}
+	  <a href="/equipos/editar" class="btn btn-info">Volver a mi equipo</a>
     </div><!-- /.container -->
 {{/layout}}
