--- a/src/main/resources/templates/partidoDetail_template.html
+++ b/src/main/resources/templates/partidoDetail_template.html
@@ -4,6 +4,7 @@
   		.tbl th, .tbl td { padding: 5px; border: solid 1px #777; text-align: center;}
   		.tbl th { background-color: lightblue; text-align: center;}
 	</style>
+	{{#existe}}
 		<div class="container theme-showcase">
 			  <div class="form-group">
 			  	<h3>Información del partido</h3>
@@ -70,5 +71,10 @@
 				<a href="/torneos/{{torneo.nombre}}" class="btn btn-success col-sm-2"><span class="glyphicon glyphicon-info"></span>Volver al torneo</a>
 			</div>
 	  </div><!-- /.container -->
-
+	{{/existe}}
+	{{^existe}}
+		<div class="container theme-showcase">
+			<h2>El partido no existe.</h2>
+		</div>
+	{{/existe}}
 {{/layout}}
